--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
       "server": "nodemon server.js",
       "client": "npm start --prefix client",
       "dev": "concurrently \"npm run server\" \"npm run client\"",
-      "build": "echo 'Building server' && cd client && npm run build",
+      "build": "echo 'Building server'",
       "install-client": "cd client && npm install",
       "heroku-postbuild": "npm run install-client && npm run build"
     },
